--- a/sb_summit2023.html
+++ b/sb_summit2023.html
@@ -135,13 +135,14 @@
             <div class="speaker-cards">
                 <div class="speaker-card">
                 <div class="speaker-image mx-auto">
-                    <img src=".">
+                    <img src="img/summit/headshot-peter-plantinga.jpg">
                 </div>
                 <div class="speaker-info">
-                    <h3 class="justified">Peter Plantiga, J.P. Morgan</h3>
-                    <p class="justified">Title: Continual Learning for End-to-End ASR by Averaging Domain Experts.</p>
-                    <p class="justified">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed malesuada velit eget sapien auctor, a luctus odio varius. Donec commodo consequat risus, at congue lectus commodo id. Ut vulputate commodo justo, nec malesuada purus vulputate eu. Phasellus consectetur turpis vitae odio pharetra, non commodo sapien commodo.
+                    <h3>Peter Plantinga</h3>
+                    <i><h4>JP Morgan Chase & Co</h4></i>
+                    <p class="title">Continual Learning for End-to-End ASR by Averaging Domain Experts</p>
+                    <p>
+                        Peter Plantinga is an Applied AI/ML Associate at the Machine Learning Center of Excellence at JP Morgan Chase & Co. He received his PhD in computer science in 2021 from the Ohio State University (USA) under Prof. Eric Fosler-Lussier focusing on knowledge transfer for the tasks of speech enhancement, robust ASR, and reading verification. His current work involves adapting large-scale ASR models to the financial domain without forgetting, as well as better evaluations of ASR models.                    
                     </p>
                 </div>
                 </div>
@@ -150,9 +151,10 @@
                         <img src="img/summit/Photo_ArianeNabethHalber_Mars2019_11 - copie.png">
                     </div>
                     <div class="speaker-info">
-                        <h3 class="justified">Ariane Nabeth Halber, Artificial Intelligence & Innovation director, ViaDialog</h3>
-                        <p class="justified">Title: How ViaDialog sponsors speechbrain and brings hyperlarge vocabulary speech technologies to the contact centres</p>
-                        <p class="justified">
+                        <h3>Ariane Nabeth Halber</h3>
+                        <i><h4>ViaDialog</h4></i>
+                        <p class="title">How ViaDialog sponsors speechbrain and brings hyperlarge vocabulary speech technologies to the contact centres</p>
+                        <p>
                             Ariane Nabeth-Halber has been working in the speech industry for 25 years. She started her career in research (ATR, Japan; Thalès, France), and then moved to the speech industry, namely with Nuance Communication, and French company Bertin IT, working there with contact centres, broadcasters, trading floors and public ministries, but also academic labs such as LIUM and Avignon University/LIA. Since August 2021, Ariane Nabeth-Halber leads the Speech and Conversational AI team at ViaDialog, to deliver efficient and safe customer relationship experiences. A European Commission expert and LT-Innovate board member, Ariane holds a PhD in computer science and signal processing from Telecom ParisTech. She regularly speaks at conferences on AI and speech technology.
                         </p>
                     </div>
@@ -165,8 +167,9 @@
                     <img src=".">
                 </div>
                 <div class="speaker-info">
-                    <h3 class="justified">Arsenii Gorin, UbenwaAI</h3>
-                    <p class="justified">Title: Deep learning for infant cry classification.</p>
+                    <h3 class="justified">Arsenii Gorin</h3>
+                    <i><h4>UbenwaAI</h4></i>
+                    <p class="title">Deep learning for infant cry classification</p>
                     <p class="justified">
                         Arsenii is the lead ML research scientist Ubenwa. He obtained a PhD from Université de Lorraine working on Automatic Speech Recognition. His main research interests are practical applications of machine learning techniques for audio and speech processing.
                     </p>
@@ -177,8 +180,9 @@
                         <img src="img/summit/vielzeuf.jpg">
                     </div>
                     <div class="speaker-info">
-                        <h3 class="justified">Vielzeuf Valentin, Orange Labs</h3>
-                        <p class="justified">Title: Speech Recognition Toolkits in Focus: Analyzing Speechbrain's Advantages and Drawbacks through some Orange’s Projects Examples.</p>
+                        <h3 class="justified">Vielzeuf Valentin</h3>
+                        <i><h4>Orange Labs</h4></i>
+                        <p class="title">Speech Recognition Toolkits in Focus: Analyzing Speechbrain's Advantages and Drawbacks through some Orange’s Projects Examples</p>
                         <p class="justified">
                             Valentin VIelzeuf is currently a researcher at Orange, focusing on Speech Recognition, Spoken Language Understanding and Complexity Reduction. He holds a phD thesis on Multimodal Deep Learning and also has a background in Computer Vision.
                         </p>
@@ -194,7 +198,8 @@
                 </div>
                 <div class="speaker-info">
                     <h3 class="justified">Yan Gao</h3>
-                    <p class="justified">Title: Federated self-supervised speech representation learning.</p>
+                    <i><h4>University of Cambridge</h4></i>
+                    <p class="title">Federated self-supervised speech representation learning</p>
                     <p class="justified">Yan Gao is a final-year PhD student in Machine Learning System lab at the University of Cambridge, supervised by Prof Nicholas Lane. His research interests are in machine learning, deep learning, optimisation. His recent topics are in federated learning with self-supervised learning on audio and vision data.</p>
                 </div>
                 </div>
@@ -204,7 +209,8 @@
                     </div>
                     <div class="speaker-info">
                         <h3 class="justified">Yannick Estève</h3>
-                        <p class="justified">Title: </p>
+                        <i><h4>Avignon Université</h4></i>
+                        <p class="title">? ? ?</p>
                         <p class="justified">
                             Yannick received the M.S. (1998) in computer science from the Aix-Marseilles University and the Ph.D. (2002) from Avignon University, France.
                             He joined Le Mans Université (LIUM lab) in 2003 as an associate professor, and became a full professor in 2010. He moved to Avignon University in 2019 and is the head of the Computer Science Laboratory of Avignon (LIA) since 2020. He has authored and co-authored more than 150 journal and conference papers in speech and language processing.                        </p>
