--- a/sb_summit2023.html
+++ b/sb_summit2023.html
@@ -231,7 +231,8 @@
                       <img src=".">
                   </div>
                   <div class="speaker-info">
-                      <h3 class="justified">Shinji Watanabe, ESPNet</h3>
+                      <h3 class="justified">Shinji Watanabe</h3>
+                      <i><h4>ESPNet</h4></i>
                     <p class="justified">
                         Shinji Watanabe is an Associate Professor at Carnegie Mellon University, Pittsburgh, PA. He received his B.S., M.S., and Ph.D. (Dr. Eng.) degrees from Waseda University, Tokyo, Japan. He was a research scientist at NTT Communication Science Laboratories, Kyoto, Japan, from 2001 to 2011, a visiting scholar at Georgia institute of technology, Atlanta, GA, in 2009, and a senior principal research scientist at Mitsubishi Electric Research Laboratories (MERL), Cambridge, MA USA from 2012 to 2017. Before Carnegie Mellon University, he was an associate research professor at Johns Hopkins University, Baltimore, MD, USA, from 2017 to 2020. His research interests include automatic speech recognition, speech enhancement, spoken language understanding, and machine learning for speech and language processing. He has published over 300 papers in peer-reviewed journals and conferences and received several awards, including the best paper award from the IEEE ASRU in 2019. He is a Senior Area Editor of the IEEE Transactions on Audio Speech and Language Processing. He was/has been a member of several technical committees, including the APSIPA Speech, Language, and Audio Technical Committee (SLA), IEEE Signal Processing Society Speech and Language Technical Committee (SLTC), and Machine Learning for Signal Processing Technical Committee (MLSP). He is an IEEE and ISCA Fellow.</p>
                   </div>
@@ -241,7 +242,8 @@
                           <img src=".">
                       </div>
                       <div class="speaker-info">
-                          <h3 class="justified">Dan Povey, Kaldi</h3>
+                          <h3 class="justified">Dan Povey</h3>
+                          <i><h4>Kaldi</h4></i>
                           <p class="justified">
                             Daniel Povey is known for many different contributions to the technology of
                             speech recognition, including early innovations in sequence training such as
@@ -266,7 +268,8 @@
                       <img src=".">
                   </div>
                   <div class="speaker-info">
-                      <h3 class="justified">Brian McFee, Librosa</h3>
+                      <h3 class="justified">Brian McFee</h3>
+                      <i><h4>Librosa</h4></i>
                     <p class="justified">
                         Brian McFee is Assistant Professor of Music Technology and Data Science New York University.
                         His work lies at the intersection of machine learning and audio analysis.
@@ -278,7 +281,8 @@
                           <img src=".">
                       </div>
                       <div class="speaker-info">
-                          <h3 class="justified">Boris Ginsburg, Nemo</h3>
+                          <h3 class="justified">Boris Ginsburg</h3>
+                          <i><h4>NeMo</h4></i>
                           <p class="justified">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed malesuada velit eget sapien auctor, a luctus odio varius. Donec commodo consequat risus, at congue lectus commodo id. Ut vulputate commodo justo, nec malesuada purus vulputate eu. Phasellus consectetur turpis vitae odio pharetra, non commodo sapien commodo.
                           </p>
@@ -292,7 +296,8 @@
                       <img src=".">
                   </div>
                   <div class="speaker-info">
-                      <h3 class="justified">Zhaoheng Ni, Torchaudio</h3>
+                      <h3 class="justified">Zhaoheng Ni</h3>
+                      <i><h4>Torchaudio</h4></i>
                     <p class="justified">
 Zhaoheng Ni is a research scientist in the PyTorch Audio team of Meta. He graduated from City University of New York supervised by Professor Michael Mandel then joined Meta AI as a research scientist in 2021. His research interests are single-channel and multi-channel speech enhancement, speech separation, and robust ASR.                    </p>
                   </div>
