added Arsenii s image

--- a/sb_summit2023.html
+++ b/sb_summit2023.html
@@ -164,7 +164,7 @@
             <div class="speaker-cards">
                 <div class="speaker-card">
                 <div class="speaker-image mx-auto">
-                    <img src=".">
+                    <img src="img/summit/arsenii.jpg">
                 </div>
                 <div class="speaker-info">
                     <h3 class="justified">Arsenii Gorin</h3>
