--- a/sb_summit2023.html
+++ b/sb_summit2023.html
@@ -164,7 +164,7 @@
             <div class="speaker-cards">
                 <div class="speaker-card">
                 <div class="speaker-image mx-auto">
-                    <img src="img/summit/arsenii.jpg">
+                    <img src="img/summit/arsenii.png">
                 </div>
                 <div class="speaker-info">
                     <h3 class="justified">Arsenii Gorin</h3>
@@ -293,7 +293,7 @@
               <div class="speaker-cards">
                 <div class="speaker-card">
                   <div class="speaker-image mx-auto">
-                      <img src=".">
+                      <img src="zhaoheng.png">
                   </div>
                   <div class="speaker-info">
                       <h3 class="justified">Zhaoheng Ni</h3>
