--- a/sb_summit2023.html
+++ b/sb_summit2023.html
@@ -278,14 +278,14 @@
                 </div>
                   <div class="speaker-card">
                       <div class="speaker-image mx-auto">
-                          <img src=".">
+                          <img src="img/summit/sanchit.jpg">
                       </div>
                       <div class="speaker-info">
-                          <h3 class="justified">Boris Ginsburg</h3>
-                          <i><h4>NeMo</h4></i>
+                          <h3 class="justified">Sanchit Gandhi</h3>
+                          <i><h4>HuggingFace</h4></i>
                           <p class="justified">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed malesuada velit eget sapien auctor, a luctus odio varius. Donec commodo consequat risus, at congue lectus commodo id. Ut vulputate commodo justo, nec malesuada purus vulputate eu. Phasellus consectetur turpis vitae odio pharetra, non commodo sapien commodo.
-                          </p>
+                          Sanchit Gandhi is an ML Engineer at Hugging Face. He leads the open-source audio team and maintains the audio models in the Transformers library, with the goal of making state-of-the-art speech recognition models more accessible to the community. Sanchit’s research interests lie in robust, generalisable speech recognition. Prior to working at Hugging Face, Sanchit completed his Masters’ Degree from the University of Cambridge.
+			  </p>
                       </div>
                     </div>
                 </div>
@@ -293,7 +293,7 @@
               <div class="speaker-cards">
                 <div class="speaker-card">
                   <div class="speaker-image mx-auto">
-                      <img src="zhaoheng.png">
+                      <img src="img/summit/zhaoheng.png">
                   </div>
                   <div class="speaker-info">
                       <h3 class="justified">Zhaoheng Ni</h3>
