--- a/sb_summit2023.html
+++ b/sb_summit2023.html
@@ -228,7 +228,7 @@
             <div class="speaker-cards">
                 <div class="speaker-card">
                   <div class="speaker-image mx-auto">
-                      <img src=".">
+                      <img src="img/summit/shinji.jpeg">
                   </div>
                   <div class="speaker-info">
                       <h3 class="justified">Shinji Watanabe</h3>
@@ -239,7 +239,7 @@
                 </div>
                   <div class="speaker-card">
                       <div class="speaker-image mx-auto">
-                          <img src=".">
+                          <img src="img/summit/danpovey.jpg">
                       </div>
                       <div class="speaker-info">
                           <h3 class="justified">Dan Povey</h3>
