--- a/sb_summit2023.html
+++ b/sb_summit2023.html
@@ -265,7 +265,7 @@
               <div class="speaker-cards">
                 <div class="speaker-card">
                   <div class="speaker-image mx-auto">
-                      <img src=".">
+                      <img src="img/summit/brianmcfee.jpg">
                   </div>
                   <div class="speaker-info">
                       <h3 class="justified">Brian McFee</h3>
@@ -278,7 +278,7 @@
                 </div>
                   <div class="speaker-card">
                       <div class="speaker-image mx-auto">
-                          <img src="img/summit/sanchit.jpg">
+                          <img src="img/summit/sanchit.jpeg">
                       </div>
                       <div class="speaker-info">
                           <h3 class="justified">Sanchit Gandhi</h3>
