--- a/sb_summit2023.html
+++ b/sb_summit2023.html
@@ -210,7 +210,7 @@
                     <div class="speaker-info">
                         <h3 class="justified">Yannick Estève</h3>
                         <i><h4>Avignon Université</h4></i>
-                        <p class="title">? ? ?</p>
+                        <p class="title"> Advancing research: some examples of the SpeechBrain's potential in the context of the LIAvignon partnership chair  </p>
                         <p class="justified">
                             Yannick received the M.S. (1998) in computer science from the Aix-Marseilles University and the Ph.D. (2002) from Avignon University, France.
                             He joined Le Mans Université (LIUM lab) in 2003 as an associate professor, and became a full professor in 2010. He moved to Avignon University in 2019 and is the head of the Computer Science Laboratory of Avignon (LIA) since 2020. He has authored and co-authored more than 150 journal and conference papers in speech and language processing.                        </p>
