--- a/sb_summit2023.html
+++ b/sb_summit2023.html
@@ -77,6 +77,9 @@
         <section class="work_area p_120">
             <div class="main_title">
               <h2>Let’s Talk About Speech Technologies</h2>
+
+	      <h3>Use <a href="https://forms.gle/u5mx9tSkwBgwmbTH9">this form</a> to register!</h3>
+
               <p class="justified large">
                 SpeechBrain has established itself as a leading deep learning toolkit
                 for speech processing in recent years, with impressive usage statistics
