added schedule details

--- a/sb_summit2023.html
+++ b/sb_summit2023.html
@@ -117,18 +117,18 @@
                 <h2>Tentative Schedule</h2>
                 <p class="justified large"> The event will start at 9am Eastern Standard Time (EST) on August 28th and, we will have two sessions with a break from 11.3 am - 12.30 pm. <br/><br/>
                     <b>Morning (9.00 am - 11.30 am):</b> <br/>
-                    <b>■</b> 9.00 am &nbsp;&nbsp;&nbsp;- 9.30 &nbsp;&nbsp;&nbsp;am<span class="tabulation"></span>Opening and thanks to Sponsors <br/>
-                    <b>■</b> 9.30 am &nbsp;&nbsp;&nbsp;- 10.00 am<span class="tabulation"></span>Industry Talk 1: Arsenii Gorin (UbenwaAI) <br/>
+		    <b>■</b>  9.00 am &nbsp;&nbsp;&nbsp;- 9.30 &nbsp;&nbsp;&nbsp;am <span class="tabulation"></span>Opening and thanks to Sponsors <br/>
+                    <b>■</b>  9.30 am &nbsp;&nbsp;&nbsp;- 10.00 am<span class="tabulation"></span>Industry Talk 1: Arsenii Gorin (UbenwaAI) <br/>
                     <b>■</b> 10.00 am - 10.30 am<span class="tabulation"></span>Academic Talk 1: Yannick Estève (Université Avignon) <br/>
                     <b>■</b> 10.30 am - 11.00 am<span class="tabulation"></span>Industry Talk 2: Ariane Nabeth Halber (ViaDialog) <br/>
                     <b>■</b> 11.00 am - 11.30 am<span class="tabulation"></span>Academic Talk 2: Yan Gao (University of Cambridge) <br/><br/>
                     <b><i>Lunch Break (11.30 am - 12.00 pm)</b></i> <br/><br/>
-                    <b>Afternoon (12.00 pm - 12.30 pm):</b> <br/>
+                    <b>Afternoon (12.00 pm - 4.30 pm):</b> <br/>
                     <b>■</b> 12.00 pm - 1.00 pm<span class="tabulation"></span>SpeechBrain Roadmap 2023 & latest updates <br/>
                     <b>■</b> 1.00 pm - 1.30 pm<span class="tabulation"></span>Industry Talk 3: Peter Plantinga (JP Morgan) <br/>
                     <b>■</b> 1.30 pm - 2.00 pm<span class="tabulation"></span>Academic Talk 4: Vielzeuf Valentin (Orange Labs) <br/>
                     <b>■</b> 2.00 pm - 2.30 pm<span class="tabulation"></span>Coffee Break <br/>
-                    <b>■</b> 2.30 pm - 4.15 pm<span class="tabulation"></span>Panel Discussion and Q&A: Shinji Watanabe, Dan Povey, Brian McFee, Sanchit Gandhi, Zhaoheng Ni <br/>
+		    <b>■</b> 2.30 pm - 4.15 pm<span class="tabulation"></span>Panel Discussion and Q&A: <br> Shinji Watanabe, Dan Povey, Brian McFee, Sanchit Gandhi, Zhaoheng Ni <br/>
                     <b>■</b> 4.15 pm - 4.30 pm<span class="tabulation"></span>Final Remarks and Closing <br/>
                 </p>
 
