SpeechBrain summit on

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 						<!-- Collect the nav links, forms, and other content for toggling -->
 						<div class="collapse navbar-collapse offset" id="navbarSupportedContent">
 							<ul class="nav navbar-nav menu_nav justify-content-center">
+								<li class="nav-item active"><a class="nav-link" href="sb_summit2023.html">Online SpeechBrain Summit</a></li>
 								<li class="nav-item active"><a class="nav-link" href="">Home</a></li>
 								<li class="nav-item"><a class="nav-link" href="about.html">About SpeechBrain</a>
                   <li class="nav-item"><a class="nav-link" href="contributing.html">Contributing</a>
@@ -116,6 +117,14 @@
         <section class="work_area p_120">
         	<div class="container">
 			<div class="main_title">
+					<h2>2023 Online SpeechBrain Summit</h2>
+					<p>
+						<a href="">Register for free</a> and join us online on August 28th for our first SpeechBrain Online Summit endorsed by <b>ISCA</b> as an official <b>Interspeech 2023</b> satellite event!
+						In this one-day summit, you will learn about the latest developments and updates of SpeechBrain, and engage in an open and collaborative discussion with the community. 
+						The summit features <b>four industrial talks</b> from <b>JP Morgan Chase & Co, Orange Labs, Ubenwa AI, and ViaDialog</b> as well as <b>two academic talks</b> from the <b>University of Cambridge
+						and Avignon University</b>. A panel discussion will conclude the day with researchers from <b>HuggingFace, Kaldi and K2, ESPNet, Librosa, and Torchaudio</b> to chat about the future of our
+						open-source tools!
+					</p><br/><br/>
         			<h2>Key Features</h2>
         			<p>SpeechBrain is an open-source conversational AI toolkit. We designed it to be simple, flexible, and well-documented. It achieves competitive performance in various domains.</p>
         		</div>
@@ -363,6 +372,12 @@
                 <div class="work_item">
                   <img class="img-partner" src="img/sponsors/logo_mila_small.png" style="padding-top:60px;"></i>
                 </div>
+			  </div>
+			  <div class="col-lg-4">
+				<div class="work_item">
+					<img src="img/sponsors/samsung_official.png" style="max-width: 250px; padding-top:100px;" alt="">
+				</div>
+			  </div>
         </section>
         <!--================End Screen Area =================-->
 
@@ -379,7 +394,6 @@
                   <div><img src="img/sponsors/logo_nuance.png" alt=""></div>
                   <div><img src="img/sponsors/logo_dolby.png" alt=""></div>
                   <div><img src="img/sponsors/logo_nvidia.png" alt=""></div>
-                  <div><img src="img/sponsors/samsung_official.png" alt=""></div>
                 </div>
               </div>
         </section>
