--- a/contributing.html
+++ b/contributing.html
@@ -35,6 +35,7 @@
 						<!-- Collect the nav links, forms, and other content for toggling -->
 						<div class="collapse navbar-collapse offset" id="navbarSupportedContent">
 							<ul class="nav navbar-nav menu_nav justify-content-center">
+                <li class="nav-item active"><a class="nav-link" href="sb_summit2023.html">Online SpeechBrain Summit</a></li>
 								<li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
 								<li class="nav-item"><a class="nav-link" href="about.html">About SpeechBrain</a>
                   <li class="nav-item"><a class="nav-link" href="contributing.html">Contributing</a>
