adding the registration link

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 			<div class="main_title">
 					<h2>2023 Online SpeechBrain Summit</h2>
 					<p>
-						<a href="">Register for free</a> and join us online on August 28th for our first SpeechBrain Online Summit endorsed by <b>ISCA</b> as an official <b>Interspeech 2023</b> satellite event!
+						<a href="https://forms.gle/6anRhjQufWZNAur18">Register for free</a> and join us online on August 28th for our first SpeechBrain Online Summit endorsed by <b>ISCA</b> as an official <b>Interspeech 2023</b> satellite event!
 						In this one-day summit, you will learn about the latest developments and updates of SpeechBrain, and engage in an open and collaborative discussion with the community. 
 						The summit features <b>four industrial talks</b> from <b>JP Morgan Chase & Co, Orange Labs, Ubenwa AI, and ViaDialog</b> as well as <b>two academic talks</b> from the <b>University of Cambridge
 						and Avignon University</b>. A panel discussion will conclude the day with researchers from <b>HuggingFace, Kaldi and K2, ESPNet, Librosa, and Torchaudio</b> to chat about the future of our
