--- a/sb_summit2023.html
+++ b/sb_summit2023.html
@@ -116,7 +116,7 @@
                 </p>
                 <hr>
                 <h2>Tentative Schedule</h2>
-                <p class="justified large"> The event will start at 9am Eastern Standard Time (EST) on August 28th and, we will have two sessions with a break from 11.3 am - 12.30 pm. <br/><br/>
+                <p class="justified large"> The event will start at 9am Eastern Daylight Time (EDT) on August 28th and, we will have two sessions with a break from 11.30 am - 12.00 pm. <br/><br/>
                     <b>Morning (9.00 am - 11.30 am):</b> <br/>
 		    <b>■</b>  9.00 am &nbsp;&nbsp;&nbsp;- 9.30 &nbsp;&nbsp;&nbsp;am <span class="tabulation"></span>Opening and thanks to Sponsors <br/>
                     <b>■</b>  9.30 am &nbsp;&nbsp;&nbsp;- 10.00 am<span class="tabulation"></span>Industry Talk 1: Arsenii Gorin (UbenwaAI) <br/>
