--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 						<!-- Collect the nav links, forms, and other content for toggling -->
 						<div class="collapse navbar-collapse offset" id="navbarSupportedContent">
 							<ul class="nav navbar-nav menu_nav justify-content-center">
-								<li class="nav-item active"><a class="nav-link" href="sb_summit2023.html">Online SpeechBrain Summit</a></li>
+								<li class="nav-item active"><a class="nav-link" href="sb_summit2023.html"><p style="font-size: 16px;"><b>Online SpeechBrain Summit</b></p></a></li>
 								<li class="nav-item active"><a class="nav-link" href="">Home</a></li>
 								<li class="nav-item"><a class="nav-link" href="about.html">About SpeechBrain</a>
                   <li class="nav-item"><a class="nav-link" href="contributing.html">Contributing</a>
@@ -104,7 +104,7 @@
                     </div>
                     <div class="row" >
                         <div class="col-lg-12" style="margin-top: 10px;" >
-                            <a href="https://drive.google.com/file/d/1Ig9KRzQ--H-0ugmz2UXA_pdxTuLBGhtk/view?usp=sharing"><font size="+1"> The call for Sponsors 2023 is open!</font></a>
+                            <a href="https://speechbrain.github.io/sb_summit2023.html"><font size="+1">We are excited to announce the SpeechBrain Summit 2023!</font></a>
                         </div>
                     </div>
 				</div>
