update Andreas bio

--- a/sb_summit2023.html
+++ b/sb_summit2023.html
@@ -414,14 +414,11 @@ robot audition and hybrid signal processing/machine learning approaches. He cont
                 <div class="speaker-info">
                     <h3 class="justified">Andreas Nautsch, SpeechBrain, Université d'Avignon</h3>
                 <p class="justified">
-Andreas is research engineer for SpeechBrain, at Université d'Avignon. He received his doctorate from TU Darmstadt (2019; with inter/national distinctions). 
-Andreas served as project editor for ISO/IEC 19794-13 (biometric voice data interchange format; 2015 to~'18), co-organised editions of the VoicePrivacy and ASVspoof challenges (2019 to~'21), 
-co-initiated the ISCA SIG on Security & Privacy in Speech Communication (SPSC; 2019 to~'22), was an Associate Editor for the EURASIP Journal on Audio, Speech, and Music Processing (2020 to~'22), 
-and co-lead the 2021 Lorentz workshop on Speech as Personal Identifiable Information. From 2012 to~'21, Andreas participated in NIST Speaker Recognition Evaluations (changing industrial/academic affiliations); 
-within the I4U consortium, he was in charge for the final classifier fusion to meet score calibration demands of NIST-preset thresholds at undisclosed speech data quality. 
-By 2020, he lead multidisciplinary publication teams composed of speech & language technologists, legal scholars, cryptographers, and biometric experts; 
-Andreas co-responded on behalf of ISCA SIG-SPSC to the public consultation of the 2021 EDPB guidelines on virtual voice assistants. 
-In 2022/'23, he readied SpeechBrain for its next major version release. 
+Andreas was research engineer at Université d'Avignon, where he co-maintained SpeechBrain readying it for its next major version release. 
+Andreas served as project editor for ISO/IEC 19794-13, co-organised editions of the VoicePrivacy and ASVspoof challenges, co-initiated the ISCA SIG on Security & Privacy in Speech Communication (SPSC), 
+was an Associate Editor for the EURASIP Journal on Audio, Speech, and Music Processing, and co-lead the 2021 Lorentz workshop on Speech as Personal Identifiable Information. By 2020, he lead multidisciplinary 
+publication teams composed of speech & language technologists, legal scholars, cryptographers, and biometric experts; Andreas co-responded on behalf of ISCA SIG-SPSC to the public consultation of the 2021 EDPB 
+guidelines on virtual voice assistants. In 2023, he joined goSmart to lead the solution development (architecture, design, and implementation) for private 5G based campus networks.
                 </p>
                 </div>
             </div>
