--- a/sb_summit2023.html
+++ b/sb_summit2023.html
@@ -126,7 +126,7 @@
                     <b><i>Lunch Break (11.30 am - 12.00 pm)</b></i> <br/><br/>
                     <b>Afternoon (12.00 pm - 4.30 pm):</b> <br/>
                     <b>■</b> 12.00 pm - 1.00 pm<span class="tabulation"></span>SpeechBrain Roadmap 2023 & latest updates <br/>
-                    <b>■</b> 1.00 pm - 1.30 pm<span class="tabulation"></span>Industry Talk 3: Peter Plantinga (JP Morgan) <br/>
+                    <b>■</b> 1.00 pm - 1.30 pm<span class="tabulation"></span>Industry Talk 3: Peter Plantinga (JP Morgan Chase) <br/>
                     <b>■</b> 1.30 pm - 2.00 pm<span class="tabulation"></span>Academic Talk 4: Vielzeuf Valentin (Orange Labs) <br/>
                     <b>■</b> 2.00 pm - 2.30 pm<span class="tabulation"></span>Coffee Break <br/>
 		    <b>■</b> 2.30 pm - 4.15 pm<span class="tabulation"></span>Panel Discussion and Q&A: <br> Shinji Watanabe, Dan Povey, Brian McFee, Sanchit Gandhi, Zhaoheng Ni <br/>
