update landing page

--- a/index.html
+++ b/index.html
@@ -119,11 +119,14 @@
 			<div class="main_title">
 					<h2>2023 Online SpeechBrain Summit</h2>
 					<p>
-						<a href="https://forms.gle/6anRhjQufWZNAur18">Register for free</a> and join us online on August 28th for our first SpeechBrain Online Summit endorsed by <b>ISCA</b> as an official <b>Interspeech 2023</b> satellite event!
-						In this one-day summit, you will learn about the latest developments and updates of SpeechBrain, and engage in an open and collaborative discussion with the community. 
-						The summit features <b>four industrial talks</b> from <b>JP Morgan Chase & Co, Orange Labs, Ubenwa AI, and ViaDialog</b> as well as <b>two academic talks</b> from the <b>University of Cambridge
-						and Avignon University</b>. A panel discussion will conclude the day with researchers from <b>HuggingFace, Kaldi and K2, ESPNet, Librosa, and Torchaudio</b> to chat about the future of our
-						open-source tools!
+						<a href="https://www.youtube.com/@SpeechBrainProject/videos">Watch the recording</a> of our SpeechBrain Online Summit event!
+						<br> 
+						
+						In our one-day summit, which was endorsed by <b>ISCA</b> as an official <b>Interspeech 2023</b> satellite event, we explored the latest developments and updates of SpeechBrain and engaged in an open and collaborative discussion with the community.
+
+						The summit featured <b>four insightful industrial talks</b> from <b>JP Morgan Chase & Co, Orange Labs, Ubenwa AI, and ViaDialog</b>, along with <b>two engaging academic talks</b> from the <b>University of Cambridge
+						and Avignon University</b>. The day concluded with a lively panel discussion involving researchers from <b>HuggingFace, Kaldi and K2, ESPNet, Librosa, and Torchaudio</b>, discussing the future of our
+						open-source tools.
 					</p><br/><br/>
         			<h2>Key Features</h2>
         			<p>SpeechBrain is an open-source conversational AI toolkit. We designed it to be simple, flexible, and well-documented. It achieves competitive performance in various domains.</p>
