--- a/sb_summit2023.html
+++ b/sb_summit2023.html
@@ -79,7 +79,7 @@
             <div class="main_title">
               <h2>Let’s Talk About Speech Technologies</h2>
 
-	      <h3>Use <a href="https://forms.gle/u5mx9tSkwBgwmbTH9">this form</a> to register!</h3>
+              <h3>Official recordings are available at <a href="https://www.youtube.com/@SpeechBrainProject/videos">this link</a>!</h3>
 
               <p class="justified large">
                 SpeechBrain has established itself as a leading deep learning toolkit
