add youtube icon

--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
 								<a class="banner_btn" href="tutorial_basics.html">Get Started</a>
 								<a class="banner_btn2" href="https://github.com/speechbrain/speechbrain">GitHub</a>
 								<a class="banner_btn4" href="https://huggingface.co/speechbrain"><img src="img/hf.svg" style="width:40px"/></a>
+								<a class="banner_btn4" href="https://www.youtube.com/@SpeechBrainProject/videos"><img src="img/youtube.svg" style="width:40px"/></a>
 							</div>
 						</div>
 						<div class="col-lg-5">
@@ -122,7 +123,7 @@
 						<a href="https://www.youtube.com/@SpeechBrainProject/videos">Watch the recording</a> of our SpeechBrain Online Summit event!
 						<br> 
 						<br> 
-						
+
 						In our one-day summit, which was endorsed by <b>ISCA</b> as an official <b>Interspeech 2023</b> satellite event, we explored the latest developments and updates of SpeechBrain and engaged in an open and collaborative discussion with the community.
 
 						The summit featured <b>four insightful industrial talks</b> from <b>JP Morgan Chase & Co, Orange Labs, Ubenwa AI, and ViaDialog</b>, along with <b>two engaging academic talks</b> from the <b>University of Cambridge
