--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
         <link rel="icon" href="img/favicon.ico">
-        <title>SpeechBrain: A PyTorch Speech Toolkit</title>
+        <title>SpeechBrain: Open-Source Conversational AI for Everyone</title>
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="css/bootstrap.css">
         <link rel="stylesheet" href="vendors/linericon/style.css">
