--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 						<div class="col-lg-7">
 							<div class="banner_content">
 								<h2>SpeechBrain <br /></h2>
-                <h3>An Open-Source Conversational AI Toolkit</h3>
+                <h3>Open-Source Conversational AI for Everyone</h3>
 								<a class="banner_btn" href="tutorial_basics.html">Get Started</a>
 								<a class="banner_btn2" href="https://github.com/speechbrain/speechbrain">GitHub</a>
 								<a class="banner_btn4" href="https://huggingface.co/speechbrain"><img src="img/hf.svg" style="width:40px"/></a>
