--- a/index.html
+++ b/index.html
@@ -121,48 +121,25 @@
         			<div class="col-lg-4">
         				<div class="work_item">
         					<i class="lnr lnr-mic"></i>
-        					<a href="#"><h4>Speech Recognition</h4></a>
-                  <p>SpeechBrain supports state-of-the-art methods for end-to-end
-                    speech recognition, including models based on CTC, CTC+attention, transducers, transformers,
-                    and neural language models relying on recurrent neural networks and transformers.</p>
+        					<a href="#"><h4>Speech</h4></a>
+                  				<p>SpeechBrain supports state-of-the-art technologies for speech recognition, enhancement, separation, text-to-speech, speaker recognition, speech-to-speech translation, spoken language understanding, and beyond.</p>
         				</div>
         			</div>
         			<div class="col-lg-4">
         				<div class="work_item">
         					<i class="lnr lnr-user"></i>
-        					<a href="#"><h4>Speaker Recognition</h4></a>
-                  <p>Speaker recognition is already deployed in a wide variety of realistic applications.
-                    SpeechBrain provides different models for speaker recognition, including X-vector, ECAPA-TDNN, PLDA, contrastive learning
-                   </p>
+        					<a href="#"><h4>Audio</h4></a>
+                  				<p>SpeechBrain encompasses a wide range of audio technologies, including vocoding, audio augmentation, feature extraction, sound event detection, beamforming, and other multi-microphone signal processing capabilities.</p>
         				</div>
         			</div>
               <div class="col-lg-4">
         				<div class="work_item">
         					<i class="lnr lnr-magic-wand"></i>
-        					<a href="#"><h4>Speech Enhancement</h4></a>
-                  <p>Spectral masking, spectral mapping, and time-domain enhancement are different methods already available within SpeechBrain.
-                    Separation methods such as Conv-TasNet, DualPath RNN, and SepFormer are implemented as well.</p>
+        					<a href="#"><h4>Text</h4></a>
+                  <p>SpeechBrain offers user-friendly tools for training Language Models, supporting technologies ranging from basic n-gram LMs to modern Large Language Models. Our platform seamlessly integrates them into speech processing pipelines and facilitates the creation of customizable chatbots. Additionally, we support machine translation, grapheme-to-phoneme technology, and more.</p>
         				</div>
         			</div>
-              <div class="col-lg-4">
-        				<div class="work_item">
-        					<i class="lnr lnr-cog"></i>
-        					<a href="#"><h4>Speech Processing</h4></a>
-                  <p>SpeechBrain provides efficient and GPU-friendly speech augmentation pipelines and acoustic features extraction, normalisation
-                    that can be used on-the-fly during your experiment.
-                  </p>
-        				</div>
-        			</div>
-              <div class="col-lg-4">
-        				<div class="work_item">
-        					<i class="lnr lnr-mic"></i>
-        					<a href="#"><h4>Multi Microphone Processing</h4></a>
-        					<p>Combining multiple microphones is a powerful approach to achieve robustness in adverse acoustic environments.
-                    SpeechBrain provides various techniques for beamforming (e.g, delay-and-sum, MVDR, and GeV) and speaker localization.
 
-                </p>
-        				</div>
-        			</div>
 	     <div class="col-lg-4">
 		 <div class="work_item">
 		 	<i class="lnr lnr-volume-medium"></i>
