--- a/index.html
+++ b/index.html
@@ -136,16 +136,15 @@
         				<div class="work_item">
         					<i class="lnr lnr-magic-wand"></i>
         					<a href="#"><h4>Text</h4></a>
-                  <p>SpeechBrain offers user-friendly tools for training Language Models, supporting technologies ranging from basic n-gram LMs to modern Large Language Models. Our platform seamlessly integrates them into speech processing pipelines and facilitates the creation of customizable chatbots. Additionally, we support machine translation, grapheme-to-phoneme technology, and more.</p>
+                  				<p>SpeechBrain offers user-friendly tools for training Language Models, supporting technologies ranging from basic n-gram LMs to modern Large Language Models. Our platform seamlessly integrates them into speech processing pipelines and facilitates the creation of customizable chatbots. Additionally, we support machine translation, grapheme-to-phoneme technology, and more.</p>
         				</div>
         			</div>
 
 	     <div class="col-lg-4">
 		 <div class="work_item">
 		 	<i class="lnr lnr-volume-medium"></i>
-		 	<a href="#"><h4>Text-to-Speech</h4></a>
-		 	<p> Text-to-Speech (TTS, also known as Speech Synthesis) allows users to generate speech signals from an input text.
-		 SpeechBrain supports popular models for TTS (e.g., Tacotron2) and Vocoders (e.g, HiFIGAN).</p>
+		 	<a href="#"><h4>Technology</h4></a>
+		 	<p>SpeechBrain leverages the most advanced deep learning technologies, including methods for self-supervised learning, continual learning, diffusion models, Bayesian deep learning, and interpretable neural networks.</p>
 		 </div>
 		 </div>
               <div class="col-lg-4">
